--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0158.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0158.html
@@ -9,13 +9,7 @@
   </head>
   <body>
     <div class="ocr_page" id="i0158.png">
-      <span class="ocr_line" title="bbox 1888 1080 2014 1408">
-        <span id="w_0" class="ocr_word" title="bbox 1888 1080 2014 1408">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ι</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 1888 1080 2014 1408"/>
       <span class="ocr_line" title="bbox 224 163 1341 225">
         <span id="w_1" class="ocr_word" title="bbox 224 174 320 225">
           <span class="alternatives">
@@ -207,9 +201,14 @@
             <ins class="alt" title="nlp 1.00">τάχα</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 797 621 862 650" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 797 621 862 650">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 797 621 862 650">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 894 599 977 650" lang="grc">
@@ -237,16 +236,16 @@
             <ins class="alt" title="nlp 1.00">οἱ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1782 618 1898 659" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέως</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 222 673 1900 744">
-        <span id="w_44" class="ocr_word" title="bbox 222 687 490 743" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 222 687 490 743">
           <span class="alternatives">
-            <ins title="nlp 2.00">σωθέντες ,</ins>
+            <ins class="alt" title="nlp 2.00">σωθέντες,</ins>
+          </span>
+        </span>
+        <span id="w_44_1" class="ocr_word" title="bbox 222 687 490 743">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 529 682 572 730" lang="grc">
@@ -264,9 +263,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 804 677 917 743" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 804 677 917 743">
           <span class="alternatives">
-            <ins title="nlp 2.00">λήΪα</ins>
+            <ins class="alt" title="nlp 2.00">λήϊα</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 804 677 917 743">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 954 673 1116 727" lang="grc">
@@ -292,16 +296,6 @@
         <span id="w_53" class="ocr_word" title="bbox 1532 696 1614 727" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 1660 697 1706 727" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
-          </span>
-        </span>
-        <span id="w_55" class="ocr_word" title="bbox 1750 695 1900 743" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κῆποι</ins>
           </span>
         </span>
       </span>
@@ -1140,9 +1134,9 @@
             <ins title="nlp 2.00">Ῥομπέρτον</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1685 2073 1895 2126" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1685 2073 1895 2126">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀποστα-</ins>
+            <ins class="alt" title="nlp 2.00">ἀποσταλείς,</ins>
           </span>
         </span>
       </span>
@@ -1150,11 +1144,6 @@
         <span id="w_218_0" class="ocr_word" title="bbox 155 2145 338 2206">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">25</ins>
-          </span>
-        </span>
-        <span id="w_218_1" class="ocr_word" title="bbox 155 2145 338 2206">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">λείς,</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 379 2142 463 2193" lang="grc">
@@ -1355,9 +1344,9 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_257" class="ocr_word" title="bbox 1715 2462 1895 2517" lang="grc">
+        <span id="w_257_0" class="ocr_word" title="bbox 1715 2462 1895 2517">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀπου-</ins>
+            <ins class="alt" title="nlp 2.00">᾿Απουληϊᾳ</ins>
           </span>
         </span>
       </span>
@@ -1365,11 +1354,6 @@
         <span id="w_258_0" class="ocr_word" title="bbox 154 2526 333 2587">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_258_1" class="ocr_word" title="bbox 154 2526 333 2587">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ληΪᾳ</ins>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 370 2529 601 2594" lang="grc">
@@ -1387,19 +1371,19 @@
             <ins class="alt" title="nlp 1.00">πόλεμον</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1004 2541 1364 2606" lang="grc">
+        <span id="w_262_0" class="ocr_word" title="bbox 1004 2541 1364 2606">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνεστήσατο ·</ins>
+            <ins class="alt" title="nlp 2.00">συνεστήσατο·</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 1004 2541 1364 2606">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1415 2563 1500 2593" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 1537 2541 1895 2611" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνδροκτασίας</ins>
           </span>
         </span>
       </span>
@@ -1439,9 +1423,9 @@
             <ins class="alt" title="nlp 1.00">ξίφους</ins>
           </span>
         </span>
-        <span id="w_272" class="ocr_word" title="bbox 1772 2640 1895 2687" lang="grc">
+        <span id="w_272_0" class="ocr_word" title="bbox 1772 2640 1895 2687">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρ-</ins>
+            <ins class="alt" title="nlp 2.00">παρέμπίμπλαντο</ins>
           </span>
         </span>
       </span>
@@ -1449,11 +1433,6 @@
         <span id="w_273" class="ocr_word" title="bbox 330 2738 355 2776">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">3</ins>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 387 2737 711 2790" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπίμπλαντο</ins>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 770 2747 797 2785">
