--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0159.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0159.html
@@ -288,19 +288,19 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1315 681 1523 743" lang="grc">
+        <span id="w_53_0" class="ocr_word" title="bbox 1315 681 1523 743">
           <span class="alternatives">
-            <ins title="nlp 2.00">πόλεως ·</ins>
+            <ins class="alt" title="nlp 2.00">πόλεως·</ins>
+          </span>
+        </span>
+        <span id="w_53_1" class="ocr_word" title="bbox 1315 681 1523 743">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1563 682 1648 732" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_55" class="ocr_word" title="bbox 1685 689 1809 747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμίν</ins>
           </span>
         </span>
       </span>
