--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0160.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0160.html
@@ -213,9 +213,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1692 1265 1877 1315" lang="grc">
+        <span id="w_39_0" class="ocr_word" title="bbox 1692 1265 1877 1315">
           <span class="alternatives">
-            <ins title="nlp 2.00">σχήμα-</ins>
+            <ins class="alt" title="nlp 2.00">σχήματος</ins>
           </span>
         </span>
       </span>
@@ -223,11 +223,6 @@
         <span id="w_40" class="ocr_word" title="bbox 158 1352 179 1384">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_41" class="ocr_word" title="bbox 201 1351 277 1392" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τος</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 325 1331 421 1381" lang="grc">
@@ -576,9 +571,14 @@
             <ins class="alt" title="nlp 1.00">γενναῖος</ins>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1136 1970 1210 2000" lang="grc">
+        <span id="w_113_0" class="ocr_word" title="bbox 1136 1970 1210 2000">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὤν</ins>
+            <ins class="alt" title="nlp 2.00">ὢν</ins>
+          </span>
+        </span>
+        <span id="w_113_1" class="ocr_word" title="bbox 1136 1970 1210 2000">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1254 1948 1380 2016" lang="grc">
@@ -589,11 +589,6 @@
         <span id="w_115" class="ocr_word" title="bbox 1429 1969 1511 1998" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1550 1964 1877 2016" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρατηγικὴν</ins>
           </span>
         </span>
       </span>
@@ -675,19 +670,19 @@
             <ins class="alt" title="nlp 1.00">ἀκατάπληκτος</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1505 2126 1576 2155" lang="grc">
+        <span id="w_132_0" class="ocr_word" title="bbox 1505 2126 1576 2155">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὤν</ins>
+            <ins class="alt" title="nlp 2.00">ὢν</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 1505 2126 1576 2155">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1611 2124 1702 2169" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 1731 2103 1878 2154" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόλιν</ins>
           </span>
         </span>
       </span>
