--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0076.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0076.html
@@ -1484,9 +1484,9 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1786 2726 1909 2758" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 1786 2726 1909 2758">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκεῖτῆς</ins>
+            <ins class="alt" title="nlp 2.00">ἐκεῖ-</ins>
           </span>
         </span>
       </span>
@@ -1496,9 +1496,14 @@
             <ins title="nlp 2.00">4</ins>
           </span>
         </span>
-        <span id="w_296" class="ocr_word" title="bbox 488 2818 528 2860">
+        <span id="w_296_0" class="ocr_word" title="bbox 488 2818 528 2860">
           <span class="alternatives">
-            <ins title="nlp 2.00">Α</ins>
+            <ins class="alt" title="nlp 2.00">τῆς</ins>
+          </span>
+        </span>
+        <span id="w_296_1" class="ocr_word" title="bbox 488 2818 528 2860">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Α</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 550 2830 638 2860">
@@ -1516,9 +1521,14 @@
             <ins class="alt" title="nlp 1.00">8</ins>
           </span>
         </span>
-        <span id="w_300_0" class="ocr_word" title="bbox 832 2830 985 2863">
+        <span id="w_300_0_0" class="ocr_word" title="bbox 832 2830 985 2863">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">*οῦσα</ins>
+          </span>
+        </span>
+        <span id="w_300_0_1" class="ocr_word" title="bbox 832 2830 985 2863">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_300_1" class="ocr_word" title="bbox 832 2830 985 2863">
@@ -1544,11 +1554,6 @@
         <span id="w_304" class="ocr_word" title="bbox 1416 2816 1558 2863" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἰοῦσα</ins>
-          </span>
-        </span>
-        <span id="w_305" class="ocr_word" title="bbox 1629 2823 1679 2862">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">13</ins>
           </span>
         </span>
       </span>
