--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0077.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0077.html
@@ -359,9 +359,14 @@
             <ins class="alt" title="nlp 1.00">πάπας</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 1321 761 1458 817" lang="grc">
+        <span id="w_67_0" class="ocr_word" title="bbox 1321 761 1458 817">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδὲ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐδὲ</ins>
+          </span>
+        </span>
+        <span id="w_67_1" class="ocr_word" title="bbox 1321 761 1458 817">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1496 780 1588 826" lang="grc">
@@ -372,11 +377,6 @@
         <span id="w_69" class="ocr_word" title="bbox 1628 780 1719 826" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχω</ins>
-          </span>
-        </span>
-        <span id="w_70" class="ocr_word" title="bbox 1747 761 1796 809" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τί</ins>
           </span>
         </span>
       </span>
