--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0078.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0078.html
@@ -366,9 +366,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 364 857 703 915" lang="grc">
+        <span id="w_68_0" class="ocr_word" title="bbox 364 857 703 915">
           <span class="alternatives">
-            <ins title="nlp 2.00">Δαντοῦλφον</ins>
+            <ins class="alt" title="nlp 2.00">Λαντοῦλφον</ins>
+          </span>
+        </span>
+        <span id="w_68_1" class="ocr_word" title="bbox 364 857 703 915">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 753 853 969 903" lang="grc">
@@ -389,11 +394,6 @@
         <span id="w_72" class="ocr_word" title="bbox 1481 853 1712 916" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πολεμίας</ins>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 1760 850 1918 917" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χειρὸς</ins>
           </span>
         </span>
       </span>
