--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0080.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0080.html
@@ -257,9 +257,14 @@
             <ins class="alt" title="nlp 1.00">ἀκατάσχετον</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 612 693 756 754" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 612 693 756 754">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁλως</ins>
+            <ins class="alt" title="nlp 2.00">(ὅλως</ins>
+          </span>
+        </span>
+        <span id="w_47_1" class="ocr_word" title="bbox 612 693 756 754">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 783 713 875 759" lang="grc">
@@ -285,11 +290,6 @@
         <span id="w_52" class="ocr_word" title="bbox 1441 690 1828 759" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποσφράγισμα</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 1866 697 1916 758" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦν</ins>
           </span>
         </span>
       </span>
@@ -831,21 +831,26 @@
             <ins title="nlp 2.00">διαπεράσωμεν·</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1731 1628 1924 1690" lang="grc">
+        <span id="w_158_0" class="ocr_word" title="bbox 1731 1628 1924 1690">
           <span class="alternatives">
-            <ins title="nlp 2.00">προεξεταζέσθω</ins>
+            <ins class="alt" title="nlp 2.00">προεξε-</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1951 1647 1980 1679" lang="grc">
+        <span id="w_158_1" class="ocr_word" title="bbox 1731 1628 1924 1690">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 235 1699 1925 1768">
-        <span id="w_161" class="ocr_word" title="bbox 496 1702 550 1750" lang="grc">
+        <span id="w_161_0" class="ocr_word" title="bbox 496 1702 550 1750">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">ταζέσθω</ins>
+          </span>
+        </span>
+        <span id="w_161_1" class="ocr_word" title="bbox 496 1702 550 1750">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 589 1722 646 1751" lang="grc">
@@ -996,9 +1001,14 @@
             <ins class="alt" title="nlp 1.00">ἀπεκδεχόμενος</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 903 2010 1007 2070" lang="grc">
+        <span id="w_190_0" class="ocr_word" title="bbox 903 2010 1007 2070">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_190_1" class="ocr_word" title="bbox 903 2010 1007 2070">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1053 2010 1146 2077" lang="grc">
@@ -1019,11 +1029,6 @@
         <span id="w_194" class="ocr_word" title="bbox 1470 2013 1819 2078" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ξυνεστράτευέ</ins>
-          </span>
-        </span>
-        <span id="w_195" class="ocr_word" title="bbox 1859 2033 1922 2062" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
       </span>
@@ -1382,9 +1387,9 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1669 2633 1919 2698" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 1669 2633 1919 2698">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σἀλερνον</ins>
+            <ins class="alt" title="nlp 2.00">Σάλερνον</ins>
           </span>
         </span>
       </span>
