--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0518.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0518.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0518.png">
-      <!--<div class="ocr_carea" title="bbox 124 200 1896 804">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 178 211 1627 267">
         <span id="w_0" class="ocr_word" title="bbox 178 215 290 267">
           <span class="alternatives">
@@ -44,156 +42,129 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 183 340 1876 408">
-        <span id="w_6" class="ocr_word" title="bbox 183 343 432 408" xml:lang="grc">
+        <span id="w_6" class="ocr_word" title="bbox 183 343 432 408" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">σκάρδου,</ins>
-            <del title="nlp 0.90">κάρδους,</del>
-            <del title="nlp 0.89">σκάρου,</del>
-            <del title="nlp 0.88">σκάρους,</del>
+            <ins title="nlp 2.00">σκάρδου,</ins>
           </span>
         </span>
-        <span id="w_7" class="ocr_word" title="bbox 473 344 728 402" xml:lang="grc">
+        <span id="w_7" class="ocr_word" title="bbox 473 344 728 402" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Βασίλειος</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 767 343 1114 408" xml:lang="grc">
+        <span id="w_8" class="ocr_word" title="bbox 767 343 1114 408" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">νωβελλίσιμος</ins>
-            <del title="nlp 0.90">ἐναίσιμος</del>
-            <del title="nlp 0.89">βιώσιμος</del>
-            <del title="nlp 0.88">βρώσιμος</del>
+            <ins title="nlp 2.00">νωβελλίσιμος</ins>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1153 340 1179 392" xml:lang="grc">
+        <span id="w_9" class="ocr_word" title="bbox 1153 340 1179 392" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1217 361 1453 407" xml:lang="grc">
+        <span id="w_10" class="ocr_word" title="bbox 1217 361 1453 407" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὐνοῦχος</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1492 342 1574 393" xml:lang="grc">
+        <span id="w_11" class="ocr_word" title="bbox 1492 342 1574 393" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1614 346 1876 395" xml:lang="grc">
+        <span id="w_12" class="ocr_word" title="bbox 1614 346 1876 395" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Κωνσταν-</ins>
+            <ins title="nlp 2.00">Κωνσταντῖνος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 179 418 634 488">
-        <span id="w_13" class="ocr_word" title="bbox 179 425 314 482" xml:lang="grc">
+        <span id="w_14" class="ocr_word" title="bbox 356 418 634 488" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">τῖνος</ins>
-            <del title="nlp 0.90">Βησαντῖνος</del>
-            <del title="nlp 0.89">Κρατῖνος</del>
-            <del title="nlp 0.88">Ταραντῖνος</del>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 356 418 634 488" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">νοτάριος.’’</ins>
-            <del title="nlp 0.90">μοτάριον</del>
-            <del title="nlp 0.89">Νεκτάριος</del>
-            <del title="nlp 0.88">σκουτάριος</del>
+            <ins title="nlp 2.00">νοτάριος.’’</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 328 494 1875 565">
-        <span id="w_15" class="ocr_word" title="bbox 328 503 429 549" xml:lang="grc">
+        <span id="w_15" class="ocr_word" title="bbox 328 503 429 549" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Τὸν</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 484 518 575 564" xml:lang="grc">
+        <span id="w_16" class="ocr_word" title="bbox 484 518 575 564" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 624 516 716 548" xml:lang="grc">
+        <span id="w_17" class="ocr_word" title="bbox 624 516 716 548" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 765 515 1012 565" xml:lang="grc">
+        <span id="w_18" class="ocr_word" title="bbox 765 515 1012 565" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔγγραφον</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1067 515 1213 563" xml:lang="grc">
+        <span id="w_19" class="ocr_word" title="bbox 1067 515 1213 563" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅρκον</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1264 516 1441 547" xml:lang="grc">
+        <span id="w_20" class="ocr_word" title="bbox 1264 516 1441 547" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτον</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1488 494 1513 547" xml:lang="grc">
+        <span id="w_21" class="ocr_word" title="bbox 1488 494 1513 547" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 1563 495 1875 565" xml:lang="grc">
+        <span id="w_22" class="ocr_word" title="bbox 1563 495 1875 565" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοκράτωρ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 180 574 1878 646">
-        <span id="w_23" class="ocr_word" title="bbox 180 595 315 646" xml:lang="grc">
+        <span id="w_23" class="ocr_word" title="bbox 180 595 315 646" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 362 597 447 629" xml:lang="grc">
+        <span id="w_24" class="ocr_word" title="bbox 362 597 447 629" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 496 581 807 640" xml:lang="grc">
+        <span id="w_25" class="ocr_word" title="bbox 496 581 807 640" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Βαἰ·μούντου</ins>
-            <del title="nlp 0.90">ἀμύντου</del>
-            <del title="nlp 0.89">Ἀμύντου</del>
-            <del title="nlp 0.88">κηραμύντου</del>
+            <ins title="nlp 2.00">ΒαΪμούντου</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 857 578 1058 641" xml:lang="grc">
+        <span id="w_26" class="ocr_word" title="bbox 857 578 1058 641" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ἔλαβεν ,</ins>
-            <del title="nlp 0.90">ἔλαβεν,</del>
-            <del title="nlp 0.89">ἔλαβέν,</del>
-            <del title="nlp 0.88">ἔβλαβεν,</del>
+            <ins title="nlp 2.00">ἔλαβεν ,</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1107 574 1403 626" xml:lang="grc">
+        <span id="w_27" class="ocr_word" title="bbox 1107 574 1403 626" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀντιδέδωκε</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1454 576 1509 625" xml:lang="grc">
+        <span id="w_28" class="ocr_word" title="bbox 1454 576 1509 625" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 1556 594 1678 643" xml:lang="grc">
+        <span id="w_29" class="ocr_word" title="bbox 1556 594 1678 643" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1725 596 1878 627" xml:lang="grc">
+        <span id="w_30" class="ocr_word" title="bbox 1725 596 1878 627" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτὸν</ins>
           </span>
@@ -205,80 +176,74 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 183 654 271 706" xml:lang="grc">
+        <span id="w_32" class="ocr_word" title="bbox 183 654 271 706" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 316 657 573 723" xml:lang="grc">
+        <span id="w_33" class="ocr_word" title="bbox 316 657 573 723" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰρημένον</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 610 659 814 705" xml:lang="grc">
+        <span id="w_34" class="ocr_word" title="bbox 610 659 814 705" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄνωθεν</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 859 653 1229 719" xml:lang="grc">
+        <span id="w_35" class="ocr_word" title="bbox 859 653 1229 719" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">χρυσόβουλλον</ins>
-            <del title="nlp 0.90">χρυσόκολλον</del>
-            <del title="nlp 0.89">χρυσόβωλον</del>
-            <del title="nlp 0.88">χρυσόμαλλον</del>
+            <ins title="nlp 2.00">χρυσόβουλλον</ins>
           </span>
         </span>
-        <span id="w_36" class="ocr_word" title="bbox 1264 654 1412 720" xml:lang="grc">
+        <span id="w_36" class="ocr_word" title="bbox 1264 654 1412 720" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγον</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1451 653 1877 720" xml:lang="grc">
+        <span id="w_37" class="ocr_word" title="bbox 1451 653 1877 720" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνσεσημασμένον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 183 732 1582 799">
-        <span id="w_38" class="ocr_word" title="bbox 183 734 264 782" xml:lang="grc">
+        <span id="w_38" class="ocr_word" title="bbox 183 734 264 782" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 302 732 657 799" xml:lang="grc">
+        <span id="w_39" class="ocr_word" title="bbox 302 732 657 799" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κινναβάρεως,</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 697 751 764 791" xml:lang="grc">
+        <span id="w_40" class="ocr_word" title="bbox 697 751 764 791" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 804 736 943 796" xml:lang="grc">
+        <span id="w_41" class="ocr_word" title="bbox 804 736 943 796" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔθος,</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 982 733 1065 781" xml:lang="grc">
+        <span id="w_42" class="ocr_word" title="bbox 982 733 1065 781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1102 734 1365 798" xml:lang="grc">
+        <span id="w_43" class="ocr_word" title="bbox 1102 734 1365 798" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βασιλικῆς</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1405 732 1582 794" xml:lang="grc">
+        <span id="w_44" class="ocr_word" title="bbox 1405 732 1582 794" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">δεζιᾶς.</ins>
-            <del title="nlp 0.90">δωριᾶς.</del>
+            <ins title="nlp 2.00">δεζιᾶς.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
