--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0301.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0301.html
@@ -416,7 +416,7 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1553 903 1814 968" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ξυμμεμιγ-</ins>
+            <ins title="nlp 2.00">ξυμμεμιγμένον·</ins>
           </span>
         </span>
       </span>
@@ -1145,12 +1145,7 @@
       <span class="ocr_line" title="bbox 125 2217 1812 2289">
         <span id="w_220" class="ocr_word" title="bbox 125 2220 510 2289" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξεργασάμενος</ins>
-          </span>
-        </span>
-        <span id="w_221" class="ocr_word" title="bbox 524 2258 538 2286">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐξεργασάμενος,</ins>
           </span>
         </span>
         <span id="w_222" class="ocr_word" title="bbox 585 2241 627 2272" lang="grc">
@@ -1403,19 +1398,19 @@
             <ins class="alt" title="nlp 1.00">Παλαιολόγου</ins>
           </span>
         </span>
-        <span id="w_272" class="ocr_word" title="bbox 1350 2607 1417 2675" lang="grc">
+        <span id="w_272_0" class="ocr_word" title="bbox 1350 2607 1417 2675">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἱ</ins>
+            <ins class="alt" title="nlp 2.00">(οἱ</ins>
+          </span>
+        </span>
+        <span id="w_272_1" class="ocr_word" title="bbox 1350 2607 1417 2675">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1456 2606 1547 2673" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 1586 2621 1809 2671" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συμπαρόντες</ins>
           </span>
         </span>
       </span>
@@ -1529,9 +1524,14 @@
             <ins class="alt" title="nlp 1.00">28</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 499 2862 575 2898">
+        <span id="w_297_0" class="ocr_word" title="bbox 499 2862 575 2898">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘an</ins>
+            <ins class="alt" title="nlp 2.00">῾an</ins>
+          </span>
+        </span>
+        <span id="w_297_1" class="ocr_word" title="bbox 499 2862 575 2898">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 608 2853 860 2909" lang="grc">
@@ -1552,11 +1552,6 @@
         <span id="w_301" class="ocr_word" title="bbox 1116 2854 1460 2907" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">καθυστερίσαι</ins>
-          </span>
-        </span>
-        <span id="w_302" class="ocr_word" title="bbox 1491 2851 1526 2894">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
