--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0302.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0302.html
@@ -316,12 +316,7 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 830 768 1077 835" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μυριάδας</ins>
-          </span>
-        </span>
-        <span id="w_60" class="ocr_word" title="bbox 1091 771 1142 832">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;”</ins>
+            <ins class="alt" title="nlp 2.00">μυριάδας;”</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 1172 766 1437 833" lang="grc">
@@ -892,12 +887,7 @@
         </span>
         <span id="w_170" class="ocr_word" title="bbox 778 1776 1060 1839" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπαιάνιζον</ins>
-          </span>
-        </span>
-        <span id="w_171" class="ocr_word" title="bbox 1071 1815 1085 1843">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐπαιάνιζον,</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1141 1779 1402 1844" lang="grc">
@@ -1355,16 +1345,26 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1825 2572 1937 2609">
+        <span id="w_260_0" class="ocr_word" title="bbox 1825 2572 1937 2609">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὸ P.</ins>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
+          </span>
+        </span>
+        <span id="w_260_1" class="ocr_word" title="bbox 1825 2572 1937 2609">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 199 2623 1874 2699">
-        <span id="w_261" class="ocr_word" title="bbox 199 2640 257 2671" lang="grc">
+        <span id="w_261_0" class="ocr_word" title="bbox 199 2640 257 2671">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ᾿ ὀνόματι</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ᾿</ins>
+          </span>
+        </span>
+        <span id="w_261_1" class="ocr_word" title="bbox 199 2640 257 2671">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὀνόματι</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 588 2647 670 2678" lang="grc">
