--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0303.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0303.html
@@ -419,14 +419,14 @@
             <ins class="alt" title="nlp 1.00">αὐτοκράτορι</ins>
           </span>
         </span>
-        <span id="w_79" class="ocr_word" title="bbox 987 902 1127 952" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 1141 918 1151 928">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεινά</ins>
+            <ins class="alt" title="nlp 2.00">δεινά·</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1141 918 1151 928">
+        <span id="w_80_1" class="ocr_word" title="bbox 1141 918 1151 928">
           <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1200 921 1258 952" lang="grc">
@@ -447,11 +447,6 @@
         <span id="w_84" class="ocr_word" title="bbox 1591 905 1708 955" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
-          </span>
-        </span>
-        <span id="w_85" class="ocr_word" title="bbox 1747 924 1803 955" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
       </span>
