--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0305.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0305.html
@@ -399,9 +399,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_75" class="ocr_word" title="bbox 735 916 999 986" lang="grc">
+        <span id="w_75_0" class="ocr_word" title="bbox 735 916 999 986">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀμφιρύκ\κῳ</ins>
+            <ins class="alt" title="nlp 2.00">ἀμφιρύκῳ</ins>
+          </span>
+        </span>
+        <span id="w_75_1" class="ocr_word" title="bbox 735 916 999 986">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1046 921 1198 970" lang="grc">
@@ -417,11 +422,6 @@
         <span id="w_78" class="ocr_word" title="bbox 1529 941 1610 972" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 1655 940 1808 989" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">παραπλεύσας</ins>
           </span>
         </span>
       </span>
@@ -834,9 +834,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_161_0" class="ocr_word" title="bbox 887 1715 979 1746">
+        <span id="w_161_0_0" class="ocr_word" title="bbox 887 1715 979 1746">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κατ'</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
+          </span>
+        </span>
+        <span id="w_161_0_1" class="ocr_word" title="bbox 887 1715 979 1746">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161_1" class="ocr_word" title="bbox 887 1715 979 1746">
@@ -847,11 +852,6 @@
         <span id="w_162" class="ocr_word" title="bbox 1254 1710 1556 1762" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποιήσωνται</ins>
-          </span>
-        </span>
-        <span id="w_163" class="ocr_word" title="bbox 1602 1694 1812 1760" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόλεμον</ins>
           </span>
         </span>
       </span>
@@ -886,19 +886,19 @@
             <ins class="alt" title="nlp 1.00">ἐλπιζόμενον</ins>
           </span>
         </span>
-        <span id="w_170" class="ocr_word" title="bbox 1386 1795 1419 1839" lang="grc">
+        <span id="w_170_0" class="ocr_word" title="bbox 1386 1795 1419 1839">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
+          </span>
+        </span>
+        <span id="w_170_1" class="ocr_word" title="bbox 1386 1795 1419 1839">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1465 1774 1807 1839" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πανωλεθρία)</ins>
-          </span>
-        </span>
-        <span id="w_172" class="ocr_word" title="bbox 1833 1789 1876 1821">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
       </span>
@@ -1452,9 +1452,14 @@
             <ins title="nlp 2.00">῾ malim</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 1321 2822 1507 2860" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 1321 2822 1507 2860">
           <span class="alternatives">
-            <ins title="nlp 2.00">τούτου'</ins>
+            <ins class="alt" title="nlp 2.00">τούτου᾿</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 1321 2822 1507 2860">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1542 2830 1561 2858">
@@ -1467,21 +1472,26 @@
             <ins class="alt" title="nlp 1.00">18</ins>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1733 2810 1808 2868" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ]</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 132 2870 1074 2930">
-        <span id="w_283" class="ocr_word" title="bbox 132 2873 256 2929">
+        <span id="w_283_0" class="ocr_word" title="bbox 132 2873 256 2929">
           <span class="alternatives">
-            <ins title="nlp 2.00">'lege</ins>
+            <ins class="alt" title="nlp 2.00">῾lege</ins>
           </span>
         </span>
-        <span id="w_284" class="ocr_word" title="bbox 287 2870 396 2930" lang="grc">
+        <span id="w_283_1" class="ocr_word" title="bbox 132 2873 256 2929">
           <span class="alternatives">
-            <ins title="nlp 2.00">γὰρ'</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_284_0" class="ocr_word" title="bbox 287 2870 396 2930">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γὰρ᾿</ins>
+          </span>
+        </span>
+        <span id="w_284_1" class="ocr_word" title="bbox 287 2870 396 2930">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 430 2889 450 2917">
@@ -1492,16 +1502,6 @@
         <span id="w_286" class="ocr_word" title="bbox 566 2878 620 2918">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">28</ins>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 650 2875 984 2930" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προξενίσειαν</ins>
-          </span>
-        </span>
-        <span id="w_288" class="ocr_word" title="bbox 1018 2875 1074 2928">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(S)</ins>
           </span>
         </span>
       </span>
