--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0306.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0306.html
@@ -311,11 +311,6 @@
             <ins class="alt" title="nlp 2.00">ἡμέραις·</ins>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 619 863 628 873">
-          <span class="alternatives">
-            <ins title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_60" class="ocr_word" title="bbox 679 846 762 896" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -457,14 +452,14 @@
             <ins class="alt" title="nlp 1.00">μόναις</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 422 1100 625 1147" lang="grc">
+        <span id="w_88_0" class="ocr_word" title="bbox 422 1100 625 1147">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἡμέραις,</ins>
+            <ins class="alt" title="nlp 2.00">ἡμέραις,</ins>
           </span>
         </span>
-        <span id="w_90_0" class="ocr_word" title="bbox 709 1085 796 1130">
+        <span id="w_88_1" class="ocr_word" title="bbox 422 1100 625 1147">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀλλ'</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
         <span id="w_90_1" class="ocr_word" title="bbox 709 1085 796 1130">
@@ -702,19 +697,19 @@
             <ins title="nlp 2.00">Κομάνων</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 1035 1467 1105 1519">
+        <span id="w_135_0" class="ocr_word" title="bbox 1035 1467 1105 1519">
           <span class="alternatives">
-            <ins title="nlp 2.00">δι'</ins>
+            <ins class="alt" title="nlp 2.00">δι᾿</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 1035 1467 1105 1519">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1153 1467 1529 1536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκροβολισμῶν</ins>
-          </span>
-        </span>
-        <span id="w_137" class="ocr_word" title="bbox 1573 1469 1890 1536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πειρωμένων</ins>
           </span>
         </span>
       </span>
@@ -1426,9 +1421,9 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1442 2878 1678 2936" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1442 2878 1678 2936">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κομάνοων</ins>
+            <ins class="alt" title="nlp 2.00">Κομάνων</ins>
           </span>
         </span>
       </span>
