--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0307.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0307.html
@@ -105,9 +105,14 @@
             <ins class="alt" title="nlp 1.00">καθ’</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1041 397 1108 440" lang="grc">
+        <span id="w_18_0" class="ocr_word" title="bbox 1041 397 1108 440">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἥν</ins>
+            <ins class="alt" title="nlp 2.00">ἣν</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 1041 397 1108 440">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1150 376 1353 440" lang="grc">
@@ -118,11 +123,6 @@
         <span id="w_20" class="ocr_word" title="bbox 1394 376 1584 437" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐδέξατο</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1620 397 1819 442" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γραφὴν</ins>
           </span>
         </span>
       </span>
@@ -357,9 +357,14 @@
             <ins class="alt" title="nlp 1.00">ἐξικνεῖται</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 880 845 1174 906" lang="grc">
+        <span id="w_68_0" class="ocr_word" title="bbox 880 845 1174 906">
           <span class="alternatives">
-            <ins title="nlp 2.00">περιαθρεῖυ</ins>
+            <ins class="alt" title="nlp 2.00">περιαθρεῖν</ins>
+          </span>
+        </span>
+        <span id="w_68_1" class="ocr_word" title="bbox 880 845 1174 906">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1202 861 1255 891" lang="grc">
@@ -370,11 +375,6 @@
         <span id="w_70" class="ocr_word" title="bbox 1282 840 1548 907" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁρώμενον,</ins>
-          </span>
-        </span>
-        <span id="w_71" class="ocr_word" title="bbox 1585 838 1814 899" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποσπὰς</ins>
           </span>
         </span>
       </span>
@@ -1061,9 +1061,14 @@
             <ins class="alt" title="nlp 1.00">γοῦν</ins>
           </span>
         </span>
-        <span id="w_205_0" class="ocr_word" title="bbox 399 2178 486 2223">
+        <span id="w_205_0_0" class="ocr_word" title="bbox 399 2178 486 2223">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">μετ'</ins>
+            <ins class="alt" title="nlp 2.00">μετ᾿</ins>
+          </span>
+        </span>
+        <span id="w_205_0_1" class="ocr_word" title="bbox 399 2178 486 2223">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_205_1" class="ocr_word" title="bbox 399 2178 486 2223">
@@ -1094,11 +1099,6 @@
         <span id="w_210" class="ocr_word" title="bbox 1664 2177 1811 2206" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">καταλαμβάνειν</ins>
-          </span>
-        </span>
-        <span id="w_211" class="ocr_word" title="bbox 1836 2179 1878 2210">
-          <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1224,19 +1224,34 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 30 2466 1816 2535">
-        <span id="w_239" class="ocr_word" title="bbox 30 2500 36 2520" lang="grc">
+        <span id="w_239_0" class="ocr_word" title="bbox 30 2500 36 2520">
           <span class="alternatives">
-            <ins title="nlp 2.00">πόλεμον.</ins>
+            <ins class="alt" title="nlp 2.00">πόλεμον.</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 126 2468 352 2535" lang="grc">
+        <span id="w_239_1" class="ocr_word" title="bbox 30 2500 36 2520">
           <span class="alternatives">
-            <ins title="nlp 2.00">κτείνονται μὲν οὖν ἐν </ins>
+            <ins class="alt" title="nlp 2.00">κτείνονται</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 736 2489 831 2535" lang="grc">
+        <span id="w_240_0" class="ocr_word" title="bbox 126 2468 352 2535">
           <span class="alternatives">
-            <ins title="nlp 2.00">τῷ</ins>
+            <ins class="alt" title="nlp 2.00">μὲν</ins>
+          </span>
+        </span>
+        <span id="w_240_1" class="ocr_word" title="bbox 126 2468 352 2535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὖν</ins>
+          </span>
+        </span>
+        <span id="w_241_0" class="ocr_word" title="bbox 736 2489 831 2535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐν</ins>
+          </span>
+        </span>
+        <span id="w_241_1" class="ocr_word" title="bbox 736 2489 831 2535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1001 2489 1056 2519" lang="grc">
@@ -1276,14 +1291,24 @@
             <ins class="alt" title="nlp 2.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_247_1" class="ocr_word" title="bbox 749 2557 971 2598">
+        <span id="w_247_1_0" class="ocr_word" title="bbox 749 2557 971 2598">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">νικῶσαν</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 998 2567 1125 2611" lang="grc">
+        <span id="w_247_1_1" class="ocr_word" title="bbox 749 2557 971 2598">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶχεν ὁ βασιλεὺς</ins>
+            <ins class="alt" title="nlp 2.00">εἶχεν</ins>
+          </span>
+        </span>
+        <span id="w_248_0" class="ocr_word" title="bbox 998 2567 1125 2611">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
+          </span>
+        </span>
+        <span id="w_248_1" class="ocr_word" title="bbox 998 2567 1125 2611">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">βασιλεὺς</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1457 2542 1672 2609">
