--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0308.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0308.html
@@ -32,13 +32,7 @@
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 1884 0 2014 376">
-        <span id="w_3" class="ocr_word" title="bbox 1884 0 2014 376">
-          <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 1884 0 2014 376"/>
       <span class="ocr_line" title="bbox 221 304 1881 374">
         <span id="w_4" class="ocr_word" title="bbox 221 306 368 374" lang="grc">
           <span class="alternatives">
@@ -60,9 +54,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 850 307 1128 371" lang="grc">
+        <span id="w_8_0" class="ocr_word" title="bbox 850 307 1128 371">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥωμαΐὀν</ins>
+            <ins class="alt" title="nlp 2.00">῾Ρωμαϊκὸν</ins>
+          </span>
+        </span>
+        <span id="w_8_1" class="ocr_word" title="bbox 850 307 1128 371">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1173 304 1458 370" lang="grc">
@@ -73,11 +72,6 @@
         <span id="w_10" class="ocr_word" title="bbox 1509 305 1786 372" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">στράτευμα</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1830 306 1881 355" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δι</ins>
           </span>
         </span>
       </span>
@@ -697,9 +691,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 221 1543 1906 1613">
-        <span id="w_132_0" class="ocr_word" title="bbox 221 1550 308 1595">
+        <span id="w_132_0_0" class="ocr_word" title="bbox 221 1550 308 1595">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀλλ'</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
+          </span>
+        </span>
+        <span id="w_132_0_1" class="ocr_word" title="bbox 221 1550 308 1595">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_132_1" class="ocr_word" title="bbox 221 1550 308 1595">
@@ -740,11 +739,6 @@
         <span id="w_139" class="ocr_word" title="bbox 1705 1547 1816 1612" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
-          </span>
-        </span>
-        <span id="w_140" class="ocr_word" title="bbox 1844 1567 1906 1598" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἰρήνης</ins>
           </span>
         </span>
       </span>
@@ -1033,12 +1027,7 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1222 2088 1590 2158" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναβαλώμεθα</ins>
-          </span>
-        </span>
-        <span id="w_195" class="ocr_word" title="bbox 1606 2112 1618 2151">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">ἀναβαλώμεθα;</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1664 2091 1778 2141" lang="grc">
@@ -1105,9 +1094,14 @@
             <ins class="alt" title="nlp 2.00">λύκου</ins>
           </span>
         </span>
-        <span id="w_209_1" class="ocr_word" title="bbox 617 2267 648 2311">
+        <span id="w_209_1_0" class="ocr_word" title="bbox 617 2267 648 2311">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
+          </span>
+        </span>
+        <span id="w_209_1_1" class="ocr_word" title="bbox 617 2267 648 2311">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 687 2245 889 2306" lang="grc">
@@ -1138,11 +1132,6 @@
         <span id="w_215" class="ocr_word" title="bbox 1677 2244 1905 2311" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βασιλεὺς</ins>
-          </span>
-        </span>
-        <span id="w_216" class="ocr_word" title="bbox 1922 2268 1962 2299">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
       </span>
