--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0313.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0313.html
@@ -169,9 +169,14 @@
             <ins title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 108 533 198 586" lang="grc">
+        <span id="w_32_0" class="ocr_word" title="bbox 108 533 198 586">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴτ'</ins>
+            <ins class="alt" title="nlp 2.00">εἴτ᾿</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 108 533 198 586">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 241 554 293 584" lang="grc">
@@ -224,11 +229,6 @@
             <ins class="alt" title="nlp 1.00">δ’</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1696 555 1753 587" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 106 611 1832 680">
         <span id="w_44" class="ocr_word" title="bbox 106 611 172 672" lang="grc">
@@ -271,14 +271,14 @@
             <ins class="alt" title="nlp 1.00">στρατιῶται</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1690 612 1787 665" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 1690 612 1787 665">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπἐκτειναν.</ins>
+            <ins class="alt" title="nlp 2.00">ἀπέκτειναν.</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1812 629 1832 661">
+        <span id="w_52_1" class="ocr_word" title="bbox 1690 612 1787 665">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -404,9 +404,14 @@
             <ins class="alt" title="nlp 1.00">ἔργον</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 640 920 781 971" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 640 920 781 971">
           <span class="alternatives">
-            <ins title="nlp 2.00">δόν”.</ins>
+            <ins class="alt" title="nlp 2.00">σόν”.</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 640 920 781 971">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 867 940 952 971" lang="grc">
@@ -427,11 +432,6 @@
         <span id="w_82" class="ocr_word" title="bbox 1492 946 1557 989" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
-          </span>
-        </span>
-        <span id="w_83" class="ocr_word" title="bbox 1607 924 1789 975" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰδέναι</ins>
           </span>
         </span>
       </span>
@@ -760,14 +760,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 1541 1790 1611">
-        <span id="w_148" class="ocr_word" title="bbox 570 1544 846 1609" lang="grc">
+        <span id="w_148_0" class="ocr_word" title="bbox 570 1544 846 1609">
           <span class="alternatives">
-            <ins title="nlp 2.00">νυχτὸς</ins>
+            <ins class="alt" title="nlp 2.00">νυκτὸς</ins>
+          </span>
+        </span>
+        <span id="w_148_1" class="ocr_word" title="bbox 570 1544 846 1609">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 859 1585 871 1607">
           <span class="alternatives">
-            <ins title="nlp 2.00">,μελετήσειε,</ins>
+            <ins title="nlp 2.00">μελετήσειε,</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 921 1564 1012 1609" lang="grc">
@@ -783,11 +788,6 @@
         <span id="w_152" class="ocr_word" title="bbox 1222 1551 1393 1593" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πᾶσαν</ins>
-          </span>
-        </span>
-        <span id="w_153" class="ocr_word" title="bbox 1428 1541 1790 1610" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναλαβόμενοι</ins>
           </span>
         </span>
       </span>
